Style and readme fixes

--- a/index.html
+++ b/index.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="el">
 
 <head>
     <meta charset="utf-8" />
     <title>Cyprus Culture Test</title>
-    <link rel="me" href="https://github.com/mrfeod/cysigns/">
+    <link rel="me" href="https://github.com/mrfeod/cycult/">
     <link rel="apple-touch-icon" sizes="180x180" href="icon/apple-touch-icon.png">
     <link rel="icon" type="image/png" sizes="32x32" href="icon/favicon-32x32.png">
     <link rel="icon" type="image/png" sizes="16x16" href="icon/favicon-16x16.png">
@@ -45,7 +45,7 @@
             <button id="nextButton" class="btn btn-primary" onclick="nextQuestion()">Επόμενη</button>
         </div>
         <div id="footerText" class="text-center">
-            <a href="#github" onClick="window.open('https://github.com/mrfeod/cysigns/')">Code⚙️</a> <a href="#donate"
+            <a href="#github" onClick="window.open('https://github.com/mrfeod/cycult/')">Code⚙️</a> <a href="#donate"
                 onClick="window.open('https://buy.stripe.com/8wMaIJaN68zif5K3cc')">«Thank you»💸</a>
         </div>
     </div>
