--- a/index.html
+++ b/index.html
@@ -30,8 +30,10 @@
             <label id="score">🟢<span id="correct">0</span> 🔴<span id="incorrect">0</span></label>
         </div>
         <div class="spacer"></div>
-        <div id="questionText" class="text-center">Question placeholder</div>
-        <div id="finishText" class="text-center">Test finished🎉</div>
+        <figure id="signContainer" class="figure loading-lg">
+            <div id="questionText" class="text-center">Question placeholder</div>
+            <div id="finishText" class="text-center">Test finished🎉</div>
+        </figure>
         <div id="answers" class="button-grid">
             <button id="answerButton0" class="btn"></button>
             <button id="answerButton1" class="btn"></button>
