Add link to Cyprus Road Signs in footer

--- a/index.html
+++ b/index.html
@@ -48,7 +48,9 @@
         </div>
         <div id="footerText" class="text-center">
             <a href="#github" onClick="window.open('https://github.com/mrfeod/cycult/')">Code⚙️</a> <a href="#donate"
-                onClick="window.open('https://buy.stripe.com/8wMaIJaN68zif5K3cc')">«Thank you»💸</a>
+                onClick="window.open('https://buy.stripe.com/8wMaIJaN68zif5K3cc')">«Thank you»💸</a> <a
+                href="#roadsigns" onClick="window.open('https://mrfeod.github.io/cysigns/')">Cyprus Road
+                Signs🚧</a>
         </div>
     </div>
     <script src="src/questions.js"></script>
